# leetcode-practice

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: python-ci.yml
php/: Dockerfile  composer.json
php/app/src/: index.php
php/app/tests/: ExampleTest.php
python/: .coverage  Dockerfile  Makefile  pyproject.toml
python/app/: pyproject.toml
python/app/src/: calculator.py
python/app/src/lp-4/: 5-1.py  5.3.py
python/app/tests/: test_calculator.py  test_example.py
python/src/: calculator.py
python/src/leet_code_practice.egg-info/: PKG-INFO  SOURCES.txt
python/tests/: test_calculator.py
typescript/: Dockerfile  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
